0.9.0 (currently working on)
- [#3681] Change: In the notification e-mails to the organizers, use the organizer as sender
- [#3697] Feature: Add a timespan "today"
- [#3700] Fix: In pi1::hideRegisterColumnIfNecessary, $whatToDisplay is undeclared
- [#3703] Cleanup: Refactor and unit-test pi1::getEditLink
- [#3694] Feature: Add a function to check whether an event is published
- [#872] Cleanup: Drop all references to the the seminars baseURL configuration
- [#3679] Fix: Update all PEAR and emogrifier classes to the latest versions
- [#3650] Fix: Objects overwrite/delete each other's configuration arrays
- [#3680] Fix: Don't send the e-mails to the attendees if the FE user's e-mail address is empty
- [#981] Change: Remove the "has paid" attribute in attendance records
- [#3481] Fix: ext_icon.gif is not a GIF file but a PNG file
- [#3678] Change: Make tx_seminars_seminar::(has|get)TopicInteger() protected
- [#3675] Fix: Crash in the FE seminar list view if no BE user is logged in
- [#3669] Fix: UTF-8 em dash used in ISO8859-1 CSV export
- [#3560] Fix: Multiple tests of the eventEditor testcase fail
- [#3668] Fix: CSV export for registrations for one event does not work
- [#3564] Feature: For the CSV export of registrations and events, use localized column headings
- [#3578] Feature: In the cancel e-mail text, provide a link to the single view
- [#3577] Feature: Mention the unregistration in the thank-you e-mail
- [#3585] Fix: Registration csv-file could not be added to the organizer mail
- [#3580] Feature: Add separate TS setup configuration variables for the CSV columns in the e-mail to the organizers
- [#3556] Fix: Use PATH_tslib in require once for tslib_content
- [#3562] Feature: Also mention event title, date and time in the other notification mails
- [#3579] Feature: In the cancel/confirm texts, insert the title, date and time of the event
- [#3576] Feature: Mention the event title, date, time and price in the thank-you and unregistration e-mail